# teledrive

./: .gitignore  CHANGELOG.md  PROGRESS.md  README.md  latest.json
.github/: FUNDING.yml
.github/workflows/: release.yml
app/: index.html  package-lock.json  package.json
app/src/: App.css  App.tsx  utils.ts
app/src-tauri/: Cargo.toml  tauri.conf.json
app/src-tauri/src/: lib.rs  main.rs  models.rs  upload_service.rs
app/src-tauri/src/commands/: auth.rs  fs.rs  mod.rs
app/src/api/: client.ts  supabase.ts
app/src/components/dashboard/: SettingsModal.tsx
backend/: Cargo.toml
backend/src/: db.rs  files.rs  main.rs  models.rs  state.rs  telegram.rs  upload.rs
docs/: DATABASE.md  DEPLOY_HUGGINGFACE.md  DEPLOY_RENDER.md  DEVELOPMENT_ROADMAP.md  README.md  WORKFLOW.md
server/: .gitignore  Dockerfile  README.md  check_user.js  data.db-shm  data.db-wal  data.json  package-lock.json  package.json
server/src/: clientManager.js  crypto.js  db.js  index.js  mediaCache.js  queue.js  supabase.js  telegram.js  uploadTracker.js
web/: index.html  package-lock.json  package.json  vite.config.ts
web/public/: manifest.json
web/src/: App.css  App.tsx  utils.ts
web/src/api/: client.ts  platform.ts  storage.ts  supabase.ts
web/src/context/: SettingsContext.tsx  TransferQueueContext.tsx
web/src/hooks/: useAdaptiveStreaming.ts  useCachedVariants.ts  useFileDownload.ts  useFileOperations.ts  useFileUpload.ts  useNetworkStatus.ts  usePlatform.ts  useTelegramConnection.ts  useUpdateCheck.ts  useVideoMetadata.ts
web/src/i18n/: index.ts
(+42 files in other folders)
