[package]
name = "telegram-drive-server"
version = "0.1.0"
edition = "2021"

[dependencies]
grammers-client = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-session = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
grammers-mtsender = { git = "https://github.com/Lonami/grammers", rev = "d07f96f", features = ["proxy"] }
grammers-tl-types = { git = "https://github.com/Lonami/grammers", rev = "d07f96f" }
tokio = { version = "1", features = ["full"] }
actix-web = "4"
actix-cors = "0.7"
actix-multipart = "0.7"
actix-files = "0.6"
actix-ws = "0.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
base64 = "0.22"
log = "0.4"
env_logger = "0.11"
futures = "0.3"
sqlite = { version = "0.37.0", features = ["bundled"] }
rand = "0.9"
sha2 = "0.10"
bcrypt = "0.16"
reqwest = { version = "0.12", features = ["stream", "rustls-tls", "socks"] }
urlencoding = "2"
